Fix wrapping issue

--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -34,6 +34,7 @@ hr {
 
 code {
   word-break: break-all;
+  white-space: normal;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
